# cpmpy

./: .coverage_1solution-ortools10iter10hrs  .coverage_1solution-ortools1iter10hrs  .coverage_1solution-ortools2iter10hrs  .coverage_1solution-ortools5iter10hrs  .coverage_counting-minizinc10iter10hrs  .coverage_counting-minizinc1iter10hrs  .coverage_counting-minizinc2iter10hrs  .coverage_counting-minizinc5iter10hrs  .coverage_counting-ortools10iter10hrs  .coverage_counting-ortools1iter10hrs  .coverage_counting-ortools2iter10hrs  .coverage_counting-ortools5iter10hrs  .coverage_equivalence-minizinc10iter10hrs  .coverage_equivalence-minizinc1iter10hrs  .coverage_equivalence-minizinc2iter10hrs  .coverage_equivalence-minizinc5iter10hrs  .coverage_equivalence-ortools10iter10hrs  .coverage_equivalence-ortools1iter10hrs  .coverage_equivalence-ortools2iter10hrs  .coverage_equivalence-ortools5iter10hrs  .coverage_metamorphic-ortools10iter10hrs  .coverage_metamorphic-ortools1iter10hrs  .coverage_metamorphic-ortools2iter10hrs  .coverage_metamorphic-ortools5iter10hrs  .coverage_optimisation-minizinc10iter10hrs  .coverage_optimisation-minizinc1iter10hrs  .coverage_optimisation-minizinc2iter10hrs  .coverage_optimisation-minizinc5iter10hrs  .coverage_optimisation-ortools10iter10hrs  .coverage_optimisation-ortools1iter10hrs  .coverage_optimisation-ortools2iter10hrs  .coverage_optimisation-ortools5iter10hrs  .coverage_sat-minizinc1iter10hrs  .coverage_sat-minizinc2iter10hrs  .cpmpy_commit  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  Cargo.toml  (+29 more)
xcsp3/: README.md  (+7 more)
(+1342 files in other folders)
